--- a/Fuggos Post World/server/package.json
+++ b/Fuggos Post World/server/package.json
@@ -22,7 +22,9 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-rate-limit": "^6.7.0",
+    "fileupload": "^1.0.0",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
     "fresh": "^0.5.2",
@@ -41,6 +43,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "negotiator": "^0.6.3",
     "object-assign": "^4.1.1",
     "object-inspect": "^1.12.2",
